--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,7 +3,7 @@
   "dockerComposeFile": ["docker-compose.yml"],
   "service": "app",
   "workspaceFolder": "/workspaces/pokematch",
-  "postCreateCommand": "npm install; node /workspaces/pokematch/.devcontainer/sample-data.js",
+  "postCreateCommand": "npm install",
   "customizations": {
     "vscode": {
       "extensions": [
